// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (a) contract with a draft (the Save draft / Sign & send row) 1`] = `
{
  "lines": 926,
  "sha256": "2ead973d80382fd12dcc156a1c5cd5fdbb358f703ef7193f252eeca95a45ee35",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b1) daily-report, new report, jobsite 124 Park Slope (wttr answers) 1`] = `
{
  "lines": 1159,
  "sha256": "da80cd1d9b6f9867086ad49b22189d85c3432ea1dfa76e525db1c55269b47ae4",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b2) daily-report, new report, location 'United States' 1`] = `
{
  "lines": 1159,
  "sha256": "998a7169f7377231f6bec2a57e54525950ba96fcd7025d7f232b272adfebb8af",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c1) construction-ai, tier enterprise (Code Check) 1`] = `
{
  "lines": 831,
  "sha256": "da1d78756b8f7754df2c27980a6d487ffb0fb3d0ffab08ff80d9bb5972edeff2",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c2) construction-ai, tier enterprise (Project Roadmap) 1`] = `
{
  "lines": 796,
  "sha256": "b096ce046a300578c7a1713738dd5e4f0ae20e72a09960b8867c70ae49220e83",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c3) construction-ai, tier pro (Code Check) 1`] = `
{
  "lines": 834,
  "sha256": "1b1b601b3b474f0c17c22fa508f1b5146a7320e831b4a2923d8dcb6b5231503d",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (d) onboarding-paywall 1`] = `
{
  "lines": 442,
  "sha256": "b7a9ec26b87739cee40ec7b10a45617b18952c30451c00b523add9a1dfa934e9",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (e) dev-ar-measure 1`] = `
{
  "lines": 2060,
  "sha256": "167128164f21bc705c825a7ad6887b4ae495b58c992e4514445519a55c49bb92",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (f) WeatherRescheduleModal, fully simulated, mounted alone 1`] = `
{
  "lines": 80,
  "sha256": "26679914b923ba44c289adba54542037bbad29d142acad1ea17c2666475dcd8b",
}
`;
